# tactoeQt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TicTactoe.cpp  TicTactoe.h  main.cpp
